--- a/src/content/docs/expressionsextension/interface.mdx
+++ b/src/content/docs/expressionsextension/interface.mdx
@@ -7,6 +7,11 @@ import { Aside } from '@astrojs/starlight/components';
 #### Interface with Expressions Extension
 Some cases, like blink handling, might require you to interface with Expressions Extension.  
 Expressions Extension offers the following ways to interact with it in your own logic:  
-- **EE/Active [Bool]** = Use this to check if Expressions Extension is active or not. false=inactive, true=active.
+| Parameter         | Type   | Description                                                                                     |
+|-------------------|--------|-------------------------------------------------------------------------------------------------|
+| **EE/Active**     | Bool   | Use this to check if Expressions Extension is active or not.                                   |
+|                   |        | false = inactive, true = active.                                                                |
+
+
 
 <Aside>Please be aware that Expressions Extension is under constant development, and information in the docs might get outdated.</Aside>
