--- a/src/content/docs/expressionsextension/structure.mdx
+++ b/src/content/docs/expressionsextension/structure.mdx
@@ -7,17 +7,21 @@ import { Aside } from '@astrojs/starlight/components';
 ### Parameters
 
 ##### Main Parameters [synced or unsynced]
-- **EE/Active [Bool]:** Triggers the system. *Global Parameter.*
-- **EE/MouthShape [Float]:** Selects mouth shape from the system.
-- **EE/EyeShape [Float]:** Selects eye shape from the system.
-- **EE/PupilShape [Float]:** Defines pupil size in the system.
+| Parameter            | Type   | Description                                                                                     |
+|----------------------|--------|-------------------------------------------------------------------------------------------------|
+| **EE/Active**        | Bool   | Triggers the system. *Global Parameter.*                                                       |
+| **EE/MouthShape**    | Float  | Selects mouth shape from the system.                                                           |
+| **EE/EyeShape**      | Float  | Selects eye shape from the system.                                                             |
+| **EE/PupilShape**     | Float  | Defines pupil size in the system.                                                               |
 
 ##### Support Parameters [always unsynced]
-- **EE/Favorite/Save_X [Bool/Trigger]:** Will save current main parameters when triggered, X being the respective slot.
-- **EE/Favorite/Load_X [Bool/Trigger]:** Will load slot X to main parameters, X being the respective save slot.
-- **EE/Favorite/X_MouthShape [Float]:** Stored value for MouthShape, X being the respective save slot.
-- **EE/Favorite/X_EyeShape [Float]:** Stored value for EyeShape, X being the respective save slot.
-- **EE/Favorite/X_PupilShape [Float]:** Stored value for PupilShape, X being the respective save slot.
+| Parameter                  | Type            | Description                                                                                     |
+|----------------------------|-----------------|-------------------------------------------------------------------------------------------------|
+| **EE/Favorite/Save_X**     | Bool/Trigger     | Will save current main parameters when triggered, X being the respective slot.                  |
+| **EE/Favorite/Load_X**     | Bool/Trigger     | Will load slot X to main parameters, X being the respective save slot.                        |
+| **EE/Favorite/X_MouthShape**| Float           | Stored value for MouthShape, X being the respective save slot.                                 |
+| **EE/Favorite/X_EyeShape**  | Float           | Stored value for EyeShape, X being the respective save slot.                                   |
+| **EE/Favorite/X_PupilShape** | Float           | Stored value for PupilShape, X being the respective save slot.                                 |
 
 ### MMD Reference
 
