--- a/src/content/docs/posesextension/structure.mdx
+++ b/src/content/docs/posesextension/structure.mdx
@@ -7,58 +7,66 @@ import { Aside } from '@astrojs/starlight/components';
 ### Parameters
 
 ##### Standalone
-- **PE/Set [Int]:** Defines the currently picked pose set. (Like standing, sitting etc.)
-- **PE/Float [Float]:** Used for pose selection and dance speed.
-- **PE/Height [Float]:** Used for height adjustment.
-- **PE/Mirror [Bool]:** Mirrors your posing.
-- **PE/Reset [Bool]:** *Unsynced* parameter called to reset and disengage Poses Extension.
-- **PE/ViewPortAdjust [Bool]:** *Unsynced* parameter called when the viewpoint should be realigned with the current pose.
-- **PE/Favorite/Showcase [Bool]:** *Unsynced* parameter to engage showcase mode.
-- **PE/Favorite/ShowcaseSpeed [Float]:** *Unsynced* parameter to select showcase speed.
-- **PE/Settings/ViewPointCorrection [Bool]:** *Unsynced* parameter toggling viewport adjust functionality.
-- **PE/Settings/ViewPointProne [Bool]:** *Unsynced* parameter overriding viewport adjust for prone.
-- **PE/Settings/TrackingOverride [Bool]:** *Unsynced* parameter which selects the tracking branch for partial tracking.
-- **PE/Settings/ForceJumpReset [Bool]:** *Unsynced* parameter which overrides GoGo Loco detection.
-- **PE/Settings/DisableProxy [Bool]:** *Unsynced* parameter which disables dial proxy-toggle handling.
-- **PE/Compatibility/GoLocomotion_StateBuffer [Bool]:** Saves the state of GoGo Loco locomotion before posing, is restored after posing.
-- **PE/ViewAdjust/Active [Bool]:** *Synced or Unsynced* parameter that states whenever ViewAdjust is active or not.
-- **PE/ViewAdjust/X & Y [Float]:** *Synced or Unsynced* parameter defining ViewAdjust X & Y direction.
-- **PE/HandAdjust/Active [Bool]:** *Synced or Unsynced* parameter that states whenever HandAdjust is active or not.  
-- **PE/HandAdjust/L & R [Float]:** *Synced or Unsynced* parameter defining selected hand gesture on each hand.
-- **PE/HeadAdjust/Active [Bool]:** *Synced or Unsynced* parameter that states whenever HeadAdjust is active or not.
-- **PE/HeadAdjust/X, Y & Z [Float]:** *Synced or Unsynced* parameter defining head position on each axis.
-- **PE/RandomPose/Trigger [Trigger/Bool]:** *Unsynced* parameter that invokes the random pose system.
-- **PE/RandomPose/PoseSet [Int]:** *Unsynced* helper parameter to determine a random pose.
-- **PE/Exit [Bool]:** *Unsynced* parameter used as condition placeholder for to-Exit transitions.
+| Parameter                                      | Type                     | Description                                                                                     |
+|------------------------------------------------|--------------------------|-------------------------------------------------------------------------------------------------|
+| **PE/Set**                                     | Int                      | Defines the currently picked pose set. (Like standing, sitting etc.)                          |
+| **PE/Float**                                   | Float                    | Used for pose selection and dance speed.                                                       |
+| **PE/Height**                                  | Float                    | Used for height adjustment.                                                                     |
+| **PE/Mirror**                                  | Bool                     | Mirrors your posing.                                                                            |
+| **PE/Reset**                                   | Bool                     | *Unsynced* parameter called to reset and disengage Poses Extension.                           |
+| **PE/ViewPortAdjust**                          | Bool                     | *Unsynced* parameter called when the viewpoint should be realigned with the current pose.     |
+| **PE/Favorite/Showcase**                       | Bool                     | *Unsynced* parameter to engage showcase mode.                                                  |
+| **PE/Favorite/ShowcaseSpeed**                  | Float                    | *Unsynced* parameter to select showcase speed.                                                |
+| **PE/Settings/ViewPointCorrection**            | Bool                     | *Unsynced* parameter toggling viewport adjust functionality.                                   |
+| **PE/Settings/ViewPointProne**                 | Bool                     | *Unsynced* parameter overriding viewport adjust for prone.                                     |
+| **PE/Settings/TrackingOverride**               | Bool                     | *Unsynced* parameter which selects the tracking branch for partial tracking.                   |
+| **PE/Settings/ForceJumpReset**                 | Bool                     | *Unsynced* parameter which overrides GoGo Loco detection.                                      |
+| **PE/Settings/DisableProxy**                   | Bool                     | *Unsynced* parameter which disables dial proxy-toggle handling.                                 |
+| **PE/Compatibility/GoLocomotion_StateBuffer** | Bool                     | Saves the state of GoGo Loco locomotion before posing, is restored after posing.               |
+| **PE/ViewAdjust/Active**                       | Bool                     | *Synced or Unsynced* parameter that states whenever ViewAdjust is active or not.               |
+| **PE/ViewAdjust/X & Y**                        | Float                    | *Synced or Unsynced* parameter defining ViewAdjust X & Y direction.                           |
+| **PE/HandAdjust/Active**                       | Bool                     | *Synced or Unsynced* parameter that states whenever HandAdjust is active or not.               |
+| **PE/HandAdjust/L & R**                        | Float                    | *Synced or Unsynced* parameter defining selected hand gesture on each hand.                    |
+| **PE/HeadAdjust/Active**                       | Bool                     | *Synced or Unsynced* parameter that states whenever HeadAdjust is active or not.               |
+| **PE/HeadAdjust/X, Y & Z**                     | Float                    | *Synced or Unsynced* parameter defining head position on each axis.                           |
+| **PE/RandomPose/Trigger**                      | Trigger/Bool            | *Unsynced* parameter that invokes the random pose system.                                      |
+| **PE/RandomPose/PoseSet**                      | Int                      | *Unsynced* helper parameter to determine a random pose.                                       |
+| **PE/Exit**                                    | Bool                     | *Unsynced* parameter used as condition placeholder for to-Exit transitions.                     |
+
 
 ##### GGL Variant
-- **InStation [Bool]:** *Unsynced* Default Parameter used by GGL for conditional checks.
-- **PE/Exit [Bool]:** *Unsynced* Parameter used as condition placeholder for to-Exit transitions.
-- **PE/Active [Bool]:** *Unsynced* Local condition ensuring the support logic is only run for PE functions.
-- **Go/Float [Float]:** Similiar to PE/Float, used for any radial selections by GGL.
-- **Go/VRCEmote [Int]:** GGL parameter that does pretty much everything. PE uses some of its pose-space.
+| Parameter              | Type   | Description                                                                                     |
+|------------------------|--------|-------------------------------------------------------------------------------------------------|
+| **InStation**          | Bool   | *Unsynced* Default Parameter used by GGL for conditional checks.                               |
+| **PE/Exit**            | Bool   | *Unsynced* Parameter used as condition placeholder for to-Exit transitions.                    |
+| **PE/Active**          | Bool   | *Unsynced* Local condition ensuring the support logic is only run for PE functions.           |
+| **Go/Float**           | Float  | Similar to PE/Float, used for any radial selections by GGL.                                   |
+| **Go/VRCEmote**        | Int    | GGL parameter that does pretty much everything. PE uses some of its pose-space.                |
 
 ##### Support Parameters [always unsynced]
-- **PE/Favorite/Slot_X_Save [Bool/Trigger]:** Will save current main parameters when triggered, X being the respective slot.
-- **PE/Favorite/Slot_X_Load [Bool/Trigger]:** Will load slot X to main parameters, X being the respective save slot.
-- **PE/Favorite/Slot_X_Set [Int]:** Stored value for PE/Set, X being the respective save slot.
-- **PE/Favorite/Slot_X_Pose [Float]:** Stored value for PE/Set, X being the respective save slot.
-- **PE/Favorite/ViewAdjust/X_A [Float]:** Stored value for PE/ViewAdjust/X, A being the respective save slot.
-- **PE/Favorite/ViewAdjust/Y_A [Float]:** Stored value for PE/ViewAdjust/Y, A being the respective save slot.
-- **PE/Favorite/ViewAdjust/Active_A [Float]:** Stored value for PE/ViewAdjust/Active, A being the respective save slot.
-- **PE/ViewAdjust/PoseBuffer [Int]:** Stores the current value of PE/Float, writes it back after migration.
-- **PE/ViewAdjust/Migrate [Bool]:** Helper parameter, tells migration logic which PE pose space branch we are on.
-- **PE/Favorite/HandAdjust/WasActive_A [Bool]:** Stored value for PE/Favorite/HandAdjust/WasActive_A, A being the respective save slot.
-- **PE/Favorite/HandAdjust/L_A [Float]:** Stored value for PE/HandAdjust/L, A being the respective save slot.
-- **PE/Favorite/HandAdjust/R_A [Float]:** Stored value for PE/HandAdjust/R, A being the respective save slot.
-- **PE/Favorite/HeadAdjust/WasActive_A [Bool]:** Stored value for PE/Favorite/HeadAdjust/WasActive_A, A being the respective save slot.
-- **PE/Favorite/HeadAdjust/X_A [Float]:** Stored value for PE/HeadAdjust/X, A being the respective save slot.
-- **PE/Favorite/HeadAdjust/Y_A [Float]:** Stored value for PE/HeadAdjust/Y, A being the respective save slot.
-- **PE/Favorite/HeadAdjust/Z_A [Float]:** Stored value for PE/HeadAdjust/Z, A being the respective save slot.
-- **PE/HeadAdjust/Reset [Trigger]:** Will reset HeadAdjust to its default values.
-- **PE/Proxy/ViewAdjust [Bool]:** Triggers PE/ViewAdjust/Active on when it's dials are used.
-- **PE/Proxy/HandAdjust [Bool]:** Triggers PE/HandAdjust/Active on when it's dials are used.
-- **PE/Proxy/HeadAdjust [Bool]:** Triggers PE/HeadAdjust/Active on when it's dials are used.
+| Parameter                                      | Type            | Description                                                                                     |
+|------------------------------------------------|-----------------|-------------------------------------------------------------------------------------------------|
+| **PE/Favorite/Slot_X_Save**                    | Bool/Trigger    | Will save current main parameters when triggered, X being the respective slot.                  |
+| **PE/Favorite/Slot_X_Load**                    | Bool/Trigger    | Will load slot X to main parameters, X being the respective save slot.                        |
+| **PE/Favorite/Slot_X_Set**                     | Int             | Stored value for PE/Set, X being the respective save slot.                                    |
+| **PE/Favorite/Slot_X_Pose**                    | Float           | Stored value for PE/Set, X being the respective save slot.                                    |
+| **PE/Favorite/ViewAdjust/X_A**                 | Float           | Stored value for PE/ViewAdjust/X, A being the respective save slot.                           |
+| **PE/Favorite/ViewAdjust/Y_A**                 | Float           | Stored value for PE/ViewAdjust/Y, A being the respective save slot.                           |
+| **PE/Favorite/ViewAdjust/Active_A**            | Float           | Stored value for PE/ViewAdjust/Active, A being the respective save slot.                      |
+| **PE/ViewAdjust/PoseBuffer**                    | Int             | Stores the current value of PE/Float, writes it back after migration.                         |
+| **PE/ViewAdjust/Migrate**                       | Bool            | Helper parameter, tells migration logic which PE pose space branch we are on.                 |
+| **PE/Favorite/HandAdjust/WasActive_A**         | Bool            | Stored value for PE/Favorite/HandAdjust/WasActive_A, A being the respective save slot.       |
+| **PE/Favorite/HandAdjust/L_A**                 | Float           | Stored value for PE/HandAdjust/L, A being the respective save slot.                           |
+| **PE/Favorite/HandAdjust/R_A**                 | Float           | Stored value for PE/HandAdjust/R, A being the respective save slot.                           |
+| **PE/Favorite/HeadAdjust/WasActive_A**         | Bool            | Stored value for PE/Favorite/HeadAdjust/WasActive_A, A being the respective save slot.       |
+| **PE/Favorite/HeadAdjust/X_A**                 | Float           | Stored value for PE/HeadAdjust/X, A being the respective save slot.                           |
+| **PE/Favorite/HeadAdjust/Y_A**                 | Float           | Stored value for PE/HeadAdjust/Y, A being the respective save slot.                           |
+| **PE/Favorite/HeadAdjust/Z_A**                 | Float           | Stored value for PE/HeadAdjust/Z, A being the respective save slot.                           |
+| **PE/HeadAdjust/Reset**                        | Trigger         | Will reset HeadAdjust to its default values.                                                  |
+| **PE/Proxy/ViewAdjust**                        | Bool            | Triggers PE/ViewAdjust/Active on when its dials are used.                                    |
+| **PE/Proxy/HandAdjust**                        | Bool            | Triggers PE/HandAdjust/Active on when its dials are used.                                    |
+| **PE/Proxy/HeadAdjust**                        | Bool            | Triggers PE/HeadAdjust/Active on when its dials are used.                                    |
+
 
 ### API
 Refer to <a href="/posesextension/interface">Interface</a>
