--- a/src/content/docs/avatardynamics/structure.mdx
+++ b/src/content/docs/avatardynamics/structure.mdx
@@ -24,11 +24,16 @@ This is processed separately to ensure that you and remote players hear the same
 ### Parameters
 
 ##### Main Parameters [synced or unsynced]
-- **AD/Noseboop [Bool]:** Whenever the nose is booped. SFX listens to this value.
-- **AD/Headpat [Bool]:** Whenever the head is pat. 
-- **AD/Random [Int]:** Used to select the audio clip for noseboops.
+| Parameter         | Type   | Description                                                                                     |
+|-------------------|--------|-------------------------------------------------------------------------------------------------|
+| **AD/Noseboop**   | Bool   | Whenever the nose is booped. SFX listens to this value.                                        |
+| **AD/Headpat**    | Bool   | Whenever the head is pat.                                                                        |
+| **AD/Random**      | Int    | Used to select the audio clip for noseboops.                                                  |
 
 ##### Support Parameters [always unsynced]
-- **AD/Safety/Noseboop [Bool]:** Determines whenever Nosebooping should work or not.
-- **AD/Safety/Headpat [Bool]:** Determines whenever Headpats should work or not.
-- **AD/Safety/AllowSelf [Bool]:** Controls whenever you can interact with yourself. 
+| Parameter                     | Type   | Description                                                                                     |
+|-------------------------------|--------|-------------------------------------------------------------------------------------------------|
+| **AD/Safety/Noseboop**        | Bool   | Determines whenever Nosebooping should work or not.                                            |
+| **AD/Safety/Headpat**         | Bool   | Determines whenever Headpats should work or not.                                               |
+| **AD/Safety/AllowSelf**       | Bool   | Controls whenever you can interact with yourself.                                              |
+
