Update to PE Modding docs

--- a/src/content/docs/posesextension/modding.mdx
+++ b/src/content/docs/posesextension/modding.mdx
@@ -58,5 +58,5 @@ Dances have a reserved *PE/Set* range of 100 or higher, so start dances beyond t
 
 :::note
 Adding more dances past the 3 provided slots, while not difficult, is not officially supported.  
-You are free to replace the built-in dances with your own if you want, 101 has special logic to play the dance backwards once it's done playing forwards.
+You are free to replace the built-in dances with your own if you want.
 :::
