--- a/src/content/docs/posesextension/setup.mdx
+++ b/src/content/docs/posesextension/setup.mdx
@@ -32,9 +32,16 @@ These options exist for convenience.
 If you want to be able to fly with GoGo Loco, you pick the "Beyond" version, else use the "All" one.
 
 #### Settings
-![Settings window, allowing you to change the sync state of each PE component.](./img/009.webp)  
-The settings window that can be opened in the menu toolbar allow you to change whenever a feature is synced or not. Syncing costs parameters, so adjust to your needs.  
-Regardless of your choice, all features will always be present locally.
+<table>
+	<tr>
+		<td>![Sync tab in settings window, allowing you to change the sync state of each PE component.](./img/009.webp)</td>
+		<td>![Other tab in settings window, allowing modification of various PE modifiers.](./img/010.webp)</td>
+	</tr>
+</table>
+Poses Extension comes with an settings window you can access through the Toolbar menu. *(BUDDYWORKS -> Poses Extension -> Settings...)*  
+  
+**Sync:** Change what syncs to other players. Features will still work locally.  
+**Other:** Adjust certain modifiers to your needs.
 
 
 ### Some items are greyed out!
